--- a/settings.json
+++ b/settings.json
@@ -3,8 +3,8 @@
 "autoplaymusic": true,
 "autocomposing": true,
 "autorecording": false,
-"NamaBot":"Toxic-Alexa_V2",
-"NomorOwner":"916380260672",
-"NamaOwner":"Toxic-Turbo",
+"NamaBot":"zaid_lh_00",
+"NomorOwner":"212639319505",
+"NamaOwner":"✓ 𝕃ℍ 𝔽𝕆ℝ 𝔸ℙℙ𝕊 𝔸ℕ𝔻 𝔾𝔸𝕄𝔼𝕊 ™",
 "HunterApi":"Ikyy69"
 }
